3- Fazendo a página de perfis

--- a/src/pages/perfis.html
+++ b/src/pages/perfis.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
+    <title>Netflix</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="../assets/logo.png" alt="logo" id="logo">
+    </header>
+    <section id="perfil">
+        <div class="perfis-container">
+            <div class="perfil-card">
+                <a href=""><img src="" alt="perfil1" class="perfil-img"></a>
+                <h3>perfil1</h3>
+            </div>
+            <div class="perfil-card">
+                <a href=""><img src="" alt="perfil2" class="perfil-img"></a>
+                <h3>perfil2</h3>
+            </div>
+            <div class="perfil-card">
+                <a href=""><img src="" alt="perfil3" class="perfil-img"></a>
+                <h3>perfil3</h3>
+            </div>
+            <div class="perfil-card">
+                <a href=""><img src="" alt="perfil4" class="perfil-img"></a>
+                <h3>perfil4</h3>
+            </div>
+            <div class="perfil-card">
+                <a href=""><img src="" alt="perfil5" class="perfil-img"></a>
+                <h3>perfil5</h3>
+            </div>
+            <div class="perfil-card">
+                <a href="./devs.html"><img src="../assets/engrenagem.png" alt="devs" class="perfil-img"></a>
+                <h3>Devs</h3>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
