--- a/src/pages/perfis.html
+++ b/src/pages/perfis.html
@@ -16,8 +16,8 @@
     <section id="perfil">
         <div class="perfis-container">
             <div class="perfil-card">
-                <a href=""><img src="" alt="perfil1" class="perfil-img"></a>
-                <h3>perfil1</h3>
+                <a href="./perfil1.html"><img src="" alt="perfil1" class="perfil-img"></a>
+                <h3>emo</h3>
             </div>
             <div class="perfil-card">
                 <a href=""><img src="" alt="perfil2" class="perfil-img"></a>
