--- a/src/pages/devs.html
+++ b/src/pages/devs.html
@@ -8,8 +8,16 @@
     <title>Netflix</title>
 </head>
 <body>
-    <header>
-        <img src="../assets/logo.png" alt="logo" id="logo">
+    <header class="cabecalho">
+        <nav class="cab-nav">
+            <img src="../assets/logoGrande.png" alt="netflix" class="perfilLog">
+            <ul class="cab-menu">
+                <li><a href="./perfis.html">Início</a></li>
+                <li><a href="#">Séries</a></li>
+                <li><a href="#">Filmes</a></li>
+                <li><a href="./perfis.html">Voltar</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="esquerda" id="dev1">
