--- a/src/pages/perfil1.html
+++ b/src/pages/perfil1.html
@@ -16,7 +16,7 @@
 <nav class="cab-nav">
     <img src="../assets/logoGrande.png" alt="netflix" class="perfilLog">
     <ul class="cab-menu">
-        <li><a href="./perfil1.html">Inicio</a></li>
+        <li><a href="./perfil1.html">Início</a></li>
         <li><a href="#">Séries</a></li>
         <li><a href="#">Filmes</a></li>
         <li><a href="./perfis.html">Voltar</a></li>
