--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/index.css">
-    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/assets/logo.png" type="image/x-icon">
     <title>Netflix</title>
 </head>
 <body>
     <main>
-        <img src="./assets/logo.png" alt="logo">
+        <img src="./src/assets/logo.png" alt="logo">
     </main>
-    <script src="./js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
